solution/day-1/step-2/hello-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
  labels:
    app: hello-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      imagePullSecrets:
        - name: auth-master3-registry
      containers:
      - name: hello-app
        image: master3.takima.io:4567/master3/kubernetes-resources/hello_world:latest
        ports:
        - containerPort: 3000
