solution/day-1/step-2/hello-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 annotations:
   kubernetes.io/ingress.class: nginx
 name: hello-app-ingress
spec:
 rules:
 - host: hello-app.votre_nom_ici.takima.cloud
   http:
     paths:
     - backend:
         service:
           name: hello-app-service
           port:
             number: 80
       path: /
       pathType: Prefix
